--- a/package.json
+++ b/package.json
@@ -9,8 +9,10 @@
   },
   "dependencies": {
     "formik": "^2.1.5",
+    "googleapis": "^60.0.1",
     "next": "9.5.2",
     "next-iron-session": "4.0.0",
+    "nodemailer": "^6.4.11",
     "prop-types": "^15.7.2",
     "react": "16.13.1",
     "react-dom": "16.13.1",
