--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "nodemailer": "^6.4.11",
     "prop-types": "^15.7.2",
     "react": "16.13.1",
+    "react-datepicker": "^3.2.2",
     "react-dom": "16.13.1",
     "swr": "^0.3.1",
     "yup": "^0.29.3"
