--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   "dependencies": {
     "formik": "^2.1.5",
     "googleapis": "^60.0.1",
+    "moment": "^2.29.0",
     "next": "9.5.2",
     "next-iron-session": "4.0.0",
     "nodemailer": "^6.4.11",
@@ -17,6 +18,7 @@
     "react": "16.13.1",
     "react-datepicker": "^3.2.2",
     "react-dom": "16.13.1",
+    "react-moment": "^1.0.0",
     "swr": "^0.3.1",
     "yup": "^0.29.3"
   },
